--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -1,4 +1,4 @@
-.img {
+/* .img {
   width: 100%;
   border-radius: 20px 20px 0 0;
   height: 80%;
@@ -11,4 +11,27 @@
   align-items: center;
   width: 20%;
   border-radius: 30px;
+} */
+
+.div {
+  background-color: red;
+  border-radius: 20px;
+  width: 20%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60% 100px 100px;
+  justify-items: center;
+}
+.card h1,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.img {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+  height: 80%;
 }
