--- a/client/src/component/landingPage/landingPage.module.css
+++ b/client/src/component/landingPage/landingPage.module.css
@@ -1,14 +1,26 @@
+/*
 .div {
   display: flex;
   justify-content: center;
   background-image: url('./img/10.jpg');
-  width: 100vw;
-  height: 100vh;
-}
+  background-size: 100vh;
+  width: 1fr;
+  height: 1fr;
+}*/
 
 .button {
-  width: 10vh;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  /* width: 10vh;
   height: 4vh;
-  position: relative;
-  top: 80vh;
+  top: 80vh; */
+}
+
+.img {
+  /* width: 100%; */
+  height: 100vh;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
