--- a/client/src/component/form/form.module.css
+++ b/client/src/component/form/form.module.css
@@ -1,29 +1,33 @@
 .container {
   display: grid;
-  height: 90.8vh;
-  grid-template-columns: 40% 1fr;
+  /* height: 90.8vh; */
+  grid-template-columns: 1fr 1fr;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .item:nth-of-type(1) {
-  padding: 20px;
+  padding: 30px;
 }
 
 .item:nth-of-type(2) {
-  padding: 20px;
+  padding: 30px;
+  justify-self: center;
 }
 
 .card {
   background-color: red;
   border-radius: 20px;
-  width: 600px;
+  width: 500px;
   height: 500px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 50% 1fr 100px;
   justify-items: center;
 }
+
 .card h1,
-h3 {
+h3,
+p {
   margin: 0;
   padding: 0;
 }
@@ -46,6 +50,7 @@ h3 {
 .form input {
   width: 30%;
   text-align: center;
+  margin: 10px;
 }
 
 .danger {
@@ -55,4 +60,5 @@ h3 {
 
 .succes {
   color: green;
+  font-size: 12.5px;
 }
