--- a/client/src/component/landingPage/landingPage.module.css
+++ b/client/src/component/landingPage/landingPage.module.css
@@ -1,26 +1,23 @@
-/*
-.div {
-  display: flex;
-  justify-content: center;
-  background-image: url('./img/10.jpg');
-  background-size: 100vh;
-  width: 1fr;
-  height: 1fr;
-}*/
-
-.button {
+.div img {
   position: absolute;
-  top: 10px;
-  left: 10px;
-  /* width: 10vh;
-  height: 4vh;
-  top: 80vh; */
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
-.img {
-  /* width: 100%; */
-  height: 100vh;
-  width: 100%;
-  padding: 0;
-  margin: 0;
+.div button {
+  position: relative;
+  width: 15%;
+  height: 30px;
+  top: 550px;
+  left: 640px;
+  font-size: 20px;
+  font-weight: 550;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.div button:hover {
+  cursor: pointer;
 }
