--- a/client/src/component/pagination/pagination.module.css
+++ b/client/src/component/pagination/pagination.module.css
@@ -3,4 +3,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 20px;
+  gap: 10px;
+}
+
+.nav button:hover {
+  cursor: pointer;
 }
