--- a/client/src/component/detail/detail.module.css
+++ b/client/src/component/detail/detail.module.css
@@ -8,6 +8,7 @@
   grid-template-rows: 100px 270px 230px;
   font-family: Arial, Helvetica, sans-serif;
   grid-column-gap: 30px;
+  /* color: white; */
 }
 
 .container ul {
@@ -76,4 +77,38 @@
 .container h4 {
   display: inline;
   margin: 0;
+}
+
+.loader {
+  --height-of-loader: 6px;
+  --loader-color: #0071e2;
+  width: 100%;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1.5s ease-in-out infinite;
+}
+
+@keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
 }
