--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,12 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .App {
   height: 100vh;
+  /* background-color: #212121; */
 }
