--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -1,32 +1,24 @@
-/* .img {
-  width: 100%;
-  border-radius: 20px 20px 0 0;
-  height: 80%;
-}
-
 .div {
-  background-color: red;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 20%;
-  border-radius: 30px;
-} */
-
-.div {
-  background-color: red;
+  background-color: #0071e2;
   border-radius: 20px;
   width: 20%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 60% 100px 100px;
-  justify-items: center;
+  grid-template-rows: 70% 1fr 1fr;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  padding-bottom: 40px;
 }
-.card h1,
+.div h1,
 h3 {
   margin: 0;
-  padding: 0;
+  padding: 0 10px 10px 10px;
 }
+
+/* .div h1 {
+  margin-top: 0;
+} */
 
 .img {
   margin: 0;
