--- a/client/src/component/form/form.module.css
+++ b/client/src/component/form/form.module.css
@@ -1,6 +1,5 @@
 .container {
   display: grid;
-  /* height: 90.8vh; */
   grid-template-columns: 1fr 1fr;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -15,7 +14,7 @@
 }
 
 .card {
-  background-color: red;
+  background-color: #0b5fb2d0;
   border-radius: 20px;
   width: 500px;
   height: 500px;
