--- a/client/src/component/home/home.module.css
+++ b/client/src/component/home/home.module.css
@@ -3,6 +3,45 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 20px;
-  padding-top: 20px;
+  gap: 50px;
+  padding-top: 35px;
+}
+
+.container {
+  background-color: #212121;
+  height: 100vh;
+}
+
+.loader {
+  --height-of-loader: 6px;
+  --loader-color: #0071e2;
+  width: 100%;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1.5s ease-in-out infinite;
+}
+
+@keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
 }
