--- a/client/src/component/navBar/navBar.module.css
+++ b/client/src/component/navBar/navBar.module.css
@@ -1,10 +1,15 @@
 .div {
   background-color: #0b5fb2d0;
-  /* background-color: #303030; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 60px;
+}
+
+.loupin {
+  background-color: red;
+  position: absolute;
+  top: 100px;
 }
 
 .div img {
@@ -30,62 +35,17 @@
 }
 
 .div button {
-  display: inline-block;
-  padding: 12px 24px;
-  border: 1px solid #4f4f4f;
-  border-radius: 4px;
-  transition: all 0.2s ease-in;
-  position: relative;
-  overflow: hidden;
-  font-size: 19px;
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin: 0 10px;
   color: white;
-  z-index: 1;
-  background-color: #212121;
+  border: solid 2px white;
+  font-size: 20px;
+  border-radius: 25px;
 }
 
-.div button:before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
-
-.div button:after {
-  content: '';
-  position: absolute;
-  left: 55%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 180%;
-  width: 160%;
-  height: 190%;
-  background-color: #39bda7;
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
-
-.div button:hover {
-  color: #ffffff;
-  border: 1px solid #39bda7;
-}
-
-.div button:hover:before {
-  top: -35%;
-  background-color: #39bda7;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-}
-
-.div button:hover:after {
-  top: -45%;
-  background-color: #39bda7;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+a {
+  text-decoration: none;
 }
