--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,12 +2,5 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.App {
-  height: 100vh;
-  /* background-color: #212121; */
+  font-family: Arial, Helvetica, sans-serif;
 }
