--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -1,29 +1,34 @@
 .div {
   background-color: #0071e2;
+  /* background-color: #212121; */
   border-radius: 20px;
-  width: 20%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 70% 1fr 1fr;
+  grid-template-rows: 200px 1fr 1fr;
   text-align: center;
   text-decoration: none;
   color: black;
-  padding-bottom: 40px;
-}
-.div h1,
-h3 {
-  margin: 0;
-  padding: 0 10px 10px 10px;
+  line-height: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* .div h1 {
-  margin-top: 0;
-} */
+.div:hover {
+  box-shadow: var(--bordes-shadow);
+}
+
+.div h3 {
+  margin: 0px 2px;
+}
+
+.div h6 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
 .img {
-  margin: 0;
-  padding: 0;
   width: 100%;
-  border-radius: 20px 20px 0 0;
-  height: 80%;
+  /* border-radius: 15px; */
+  border-radius: 15px 15px 0 0;
+  height: 100%;
+  object-fit: cover;
 }
