--- a/client/src/component/filtered/filtered.module.css
+++ b/client/src/component/filtered/filtered.module.css
@@ -1,19 +1,39 @@
 .div {
   display: flex;
   height: 40px;
-  justify-content: space-around;
-  align-content: center;
-  background-color: #0b5fb2d0;
-  /* background-color: #303030; */
+  justify-content: center;
+  align-items: center;
+  background-color: #212121;
+  padding: 15px 0;
+  gap: 30px;
 }
 
-.slect,
-button {
-  font-family: Arial, Helvetica, sans-serif;
+.containerAll {
+  height: 0px;
+}
+
+.containerAll select {
   font-size: 13px;
   font-weight: 500;
   height: 80%;
   text-align: center;
+  color: white;
+  background-color: #212121;
+  border-radius: 15px;
+  color: white;
+  border: solid 2px white;
+}
+
+.containerAll button {
+  font-size: 13px;
+  font-weight: 500;
+  height: 80%;
+  text-align: center;
+  color: white;
+  background-color: #212121;
+  border-radius: 15px;
+  color: white;
+  border: solid 2px white;
 }
 
 .slect,
