--- a/client/src/component/navBar/navBar.module.css
+++ b/client/src/component/navBar/navBar.module.css
@@ -1,37 +1,44 @@
 .div {
-  background-color: #0b5fb2d0;
+  background-color: #0071e2;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 60px;
-}
-
-.loupin {
-  background-color: red;
-  position: absolute;
-  top: 100px;
 }
 
 .div img {
   width: 100%;
 }
 
-.nav {
+.home {
   width: 5%;
   height: 80%;
   border-radius: 50%;
 }
 
+.div a {
+  border-radius: 50px;
+  text-decoration: none;
+}
+
 .input {
-  width: 100%;
-  border-radius: 35px;
-  border: 2px solid black;
+  width: 330px;
+  border: none;
   height: 100%;
+  background-color: rgba(255, 0, 0, 0);
+}
+
+.input:focus {
+  outline: none;
+}
+
+.input::placeholder {
+  font-size: 15px;
 }
 
 .form {
-  height: 60%;
-  width: 25%;
+  height: 100%;
+  width: 80%;
 }
 
 .div button {
@@ -46,6 +53,19 @@
   border-radius: 25px;
 }
 
-a {
-  text-decoration: none;
+.containerSearch {
+  background-color: rgba(237, 237, 237);
+  height: 60%;
+  width: 25%;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.loupin {
+  position: absolute;
+  top: 18px;
+  left: 575px;
+  width: 20px;
+  height: 20px;
 }
