--- a/client/src/component/pagination/pagination.module.css
+++ b/client/src/component/pagination/pagination.module.css
@@ -1,12 +1,65 @@
 .nav {
-  background-color: #212121;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  padding: 20px;
+  /* background-color: #0b5fb2; */
+  background-color: #0071e200;
+}
+
+.containerAll {
+  background-color: #0071e2;
+  border-radius: 15px 15px 0 0;
+  display: flex;
+  bottom: 0px;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
+  height: 30px;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
 }
 
 .nav button:hover {
   cursor: pointer;
+}
+
+.nav button {
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  box-sizing: border-box;
+  font-weight: 400;
+  height: 1.4rem;
+  line-height: 0;
+  justify-content: center;
+  min-width: 1.4rem;
+  padding: 0;
+  background-color: #12508e;
+  color: white;
+  margin: 0;
+}
+
+.nav .prevNext {
+  font-size: 0.8rem;
+  border-radius: 5px;
+  padding: 0 3px 0 3px;
+  margin: 0 7px 0 7px;
+  background-color: rgba(255, 0, 0, 0);
+}
+
+.nav button:hover {
+  background-color: #3489dee6;
+}
+
+.nav .button:focus {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+.active {
+  background-color: red;
 }
