--- a/client/src/component/filtered/filtered.module.css
+++ b/client/src/component/filtered/filtered.module.css
@@ -6,6 +6,9 @@
   background-color: #212121;
   padding: 15px 0;
   gap: 30px;
+  position: absolute;
+  top: 60px;
+  left: 450px;
 }
 
 .containerAll {
@@ -17,7 +20,6 @@
   font-weight: 500;
   height: 80%;
   text-align: center;
-  color: white;
   background-color: #212121;
   border-radius: 15px;
   color: white;
@@ -29,7 +31,6 @@
   font-weight: 500;
   height: 80%;
   text-align: center;
-  color: white;
   background-color: #212121;
   border-radius: 15px;
   color: white;
@@ -39,4 +40,66 @@
 .slect,
 button:hover {
   cursor: pointer;
+}
+
+.filtros {
+  height: 60% !important;
+  width: 10% !important;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px !important;
+  z-index: 1;
+}
+
+.containerButtonFiltros {
+  position: relative;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  background-color: #212121;
+}
+
+.slideInLeft {
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  background-color: #0071e2;
+  padding: 3px;
+  margin: 13px;
+  gap: 30px;
+  position: absolute;
+  top: 60px;
+  left: 450px;
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateX(-150%);
+    transform: translateX(-150%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateX(-150%);
+    transform: translateX(-150%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
 }
