--- a/client/src/component/filtered/filtered.module.css
+++ b/client/src/component/filtered/filtered.module.css
@@ -1,4 +1,4 @@
-.div {
+/* .div {
   display: flex;
   height: 40px;
   justify-content: center;
@@ -102,4 +102,64 @@ button:hover {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
+} */
+
+.containerAll {
+  background-color: #0071e2;
+  height: 100vh;
+  /* opacity: 0.5; */
+  width: 25%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateY(-150%);
+    transform: translateY(-150%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateY(-150%);
+    transform: translateY(-150%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.cerrarFiltros {
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  height: 40px;
+  margin: 0 10px;
+  color: white;
+  border: solid 2px white;
+  font-size: 20px;
+  border-radius: 25px;
+}
+
+.containerButton {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
