--- a/client/src/component/navBar/navBar.module.css
+++ b/client/src/component/navBar/navBar.module.css
@@ -67,9 +67,7 @@
 }
 
 .loupin {
-  position: absolute;
-  top: 18px;
-  left: 575px;
-  width: 20px;
-  height: 20px;
+  position: relative;
+  top: 7px;
+  left: 10px;
 }
