--- a/client/src/component/filtered/filtered.module.css
+++ b/client/src/component/filtered/filtered.module.css
@@ -1,113 +1,6 @@
-/* .div {
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
-  background-color: #212121;
-  padding: 15px 0;
-  gap: 30px;
-  position: absolute;
-  top: 60px;
-  left: 450px;
-}
-
-.containerAll {
-  height: 0px;
-}
-
-.containerAll select {
-  font-size: 13px;
-  font-weight: 500;
-  height: 80%;
-  text-align: center;
-  background-color: #212121;
-  border-radius: 15px;
-  color: white;
-  border: solid 2px white;
-}
-
-.containerAll button {
-  font-size: 13px;
-  font-weight: 500;
-  height: 80%;
-  text-align: center;
-  background-color: #212121;
-  border-radius: 15px;
-  color: white;
-  border: solid 2px white;
-}
-
-.slect,
-button:hover {
-  cursor: pointer;
-}
-
-.filtros {
-  height: 60% !important;
-  width: 10% !important;
-  margin-left: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px !important;
-  z-index: 1;
-}
-
-.containerButtonFiltros {
-  position: relative;
-  width: 100%;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  background-color: #212121;
-}
-
-.slideInLeft {
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
-  background-color: #0071e2;
-  padding: 3px;
-  margin: 13px;
-  gap: 30px;
-  position: absolute;
-  top: 60px;
-  left: 450px;
-  -webkit-animation-name: slideInLeft;
-  animation-name: slideInLeft;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-@-webkit-keyframes slideInLeft {
-  0% {
-    -webkit-transform: translateX(-150%);
-    transform: translateX(-150%);
-    visibility: visible;
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-@keyframes slideInLeft {
-  0% {
-    -webkit-transform: translateX(-150%);
-    transform: translateX(-150%);
-    visibility: visible;
-  }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-} */
-
 .containerAll {
   background-color: #0071e2;
   height: 100vh;
-  /* opacity: 0.5; */
   width: 25%;
   position: fixed;
   left: 0;
@@ -121,6 +14,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .slideInLeft select {
@@ -182,10 +76,9 @@ button:hover {
 }
 
 .containerButton {
-  /* padding: 10px; */
   margin: 15px 0px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
 }
 
