--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -8,7 +8,7 @@
   text-decoration: none;
   color: black;
   line-height: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .div:hover {
