--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -1,5 +1,11 @@
 .card {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  overflow: hidden;
+  word-wrap: break-word;
+  text-align: center;
 }
 
 .link {
@@ -9,7 +15,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: min-content;
 }
 
 .img {
@@ -30,7 +35,7 @@
   justify-items: center;
 }
 
-.card .name {
+.name {
   color: black;
   display: flex;
 }
@@ -70,7 +75,7 @@
 .labels label {
   background-color: #0071e2;
   border-radius: 5px;
-  padding: 0 1px 0 1px;
+  padding: 2px;
   color: black;
   font-weight: 501;
 }
