--- a/client/src/component/filtered/filtered.css
+++ b/client/src/component/filtered/filtered.css
@@ -21,3 +21,23 @@
 .labelategoryActive:hover {
   cursor: pointer;
 }
+
+.labelCreated {
+  background-color: #0071e2;
+  border-radius: 5px;
+  color: black;
+  font-weight: 501;
+  padding: 5px;
+  width: 30%;
+  text-align: center;
+}
+
+.labelCreatedActive {
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+  font-weight: 501;
+  padding: 5px;
+  width: 30%;
+  text-align: center;
+}
