--- a/client/src/component/pagination/pagination.module.css
+++ b/client/src/component/pagination/pagination.module.css
@@ -1,12 +1,3 @@
-.nav {
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: #0071e200;
-}
-
 .containerAll {
   background-color: #0071e2;
   border-radius: 15px 15px 0 0;
@@ -21,11 +12,11 @@
   border-right: 2px solid black;
 }
 
-.nav button:hover {
+.containerAll button:hover {
   cursor: pointer;
 }
 
-.nav button {
+.containerAll button {
   display: flex;
   align-items: center;
   border: none;
@@ -42,7 +33,7 @@
   margin: 0;
 }
 
-.nav .prevNext {
+.containerAll .prevNext {
   font-size: 0.8rem;
   border-radius: 5px;
   padding: 0 3px 0 3px;
@@ -50,7 +41,7 @@
   background-color: rgba(255, 0, 0, 0);
 }
 
-.nav button:hover {
+.containerAll button:hover {
   background-color: #3489dee6;
 }
 
