--- a/client/src/component/detail/detail.module.css
+++ b/client/src/component/detail/detail.module.css
@@ -1,6 +1,7 @@
 .container {
+  background-color: rgb(67, 62, 67);
   height: 80%;
-  border: 4px solid black;
+  border: 4px solid #0071e2;
   border-radius: 30px;
   margin: 2% 10%;
   display: grid;
@@ -8,7 +9,7 @@
   grid-template-rows: 100px 270px 230px;
   font-family: Arial, Helvetica, sans-serif;
   grid-column-gap: 30px;
-  /* color: white; */
+  padding: 50px;
 }
 
 .container ul {
@@ -24,45 +25,43 @@
 }
 
 .item:nth-of-type(1) {
-  /* background-color: red; */
   grid-column: 1 / -1;
   justify-self: center;
+  align-items: center;
   padding: 0;
 }
 
 .item:nth-of-type(2) {
-  /* background-color: blue; */
   grid-row: 2 / 3;
 }
 
 .item:nth-of-type(3) {
-  /* background-color: brown; */
   overflow: auto;
   grid-row: 2 / 3;
   grid-column: 2 / -1;
+  text-align: center;
 }
 
 .item:nth-of-type(4) {
-  /* background-color: pink; */
   grid-row: 3 / 4;
   justify-self: center;
-  align-self: center;
+  align-self: flex-start;
 }
 
 .item:nth-of-type(5) {
-  /* background-color: yellow; */
   grid-column: 2 / 3;
   grid-row: 3 / 4;
   justify-self: center;
   align-self: center;
+  align-self: flex-start;
 }
 
 .item:nth-of-type(6) {
-  /* background-color: red; */
   grid-column: 3 / 4;
   grid-row: 3 / 4;
   justify-self: center;
   align-self: center;
+  align-self: flex-start;
 }
 
 .container h1 {
@@ -90,7 +89,7 @@
 }
 
 .loader::before {
-  content: '';
+  content: "";
   position: absolute;
   background: var(--loader-color);
   top: 0;
