--- a/client/src/component/cardFavorite/cardFavorite.module.css
+++ b/client/src/component/cardFavorite/cardFavorite.module.css
@@ -9,6 +9,7 @@
   color: black;
   line-height: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 280px;
 }
 
 .div:hover {
