--- a/client/src/component/filtered/filtered.css
+++ b/client/src/component/filtered/filtered.css
@@ -4,6 +4,7 @@
   color: black;
   font-weight: 501;
   padding: 5px;
+  border: none;
 }
 
 .labelategory:hover {
@@ -13,6 +14,7 @@
   color: white;
   font-weight: 501;
   padding: 5px;
+  border: none;
 }
 
 .labelategoryActive {
