--- a/client/src/component/form/form.module.css
+++ b/client/src/component/form/form.module.css
@@ -1,42 +1,130 @@
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.item:nth-of-type(1) {
-  padding: 30px;
-}
-
-.item:nth-of-type(2) {
-  padding: 30px;
-  justify-self: center;
+.containerAll {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 25px;
 }
 
 .card {
-  background-color: #0b5fb2d0;
-  border-radius: 20px;
-  width: 500px;
-  height: 500px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50% 1fr 100px;
-  justify-items: center;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
 }
 
-.card h1,
-h3,
-p {
-  margin: 0;
-  padding: 0;
-}
-
-.img {
+/* .img {
   margin: 0;
   padding: 0;
   width: 100%;
   border-radius: 20px 20px 0 0;
-  height: 100%;
+  object-fit: contain;
+}
+
+.card label {
+  background-color: #0071e2;
+  border-radius: 5px;
+  color: black;
+  font-weight: 501;
+  padding: 5px;
+  border: none;
+} */
+
+/* ************ */
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  overflow: hidden;
+  word-wrap: break-word;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.img {
+  width: 360px;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 25px;
+}
+
+.card h3 {
+  background-color: white;
+  padding: 1px 20px 1px 20px;
+  border-radius: 15px;
+  max-width: fit-content;
+  display: flex;
+  position: relative;
+  top: -30px;
+  justify-items: center;
+}
+
+.name {
+  color: black;
+  display: flex;
+}
+
+.card h6 {
+  padding: 0;
+  margin: 0;
+}
+
+.labels {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+  top: -15px;
+  gap: 5px;
+}
+
+.labels label {
+  background-color: #0071e2;
+  border-radius: 5px;
+  padding: 2px;
+  color: black;
+  font-weight: 501;
+}
+/* ************ */
+
+.containerLabels {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
+.imgGenre {
+  width: 60px;
+  padding: 5px;
+}
+
+.imgGenre:hover {
+  cursor: pointer;
+}
+
+.containgerGenres {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: fit-content;
+  padding: 7px;
+}
+
+.divContarner {
+  background-color: #0071e2;
+  border-radius: 15px;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
 }
 
 .form {
@@ -44,20 +132,26 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background-color: #0071e2;
+  border-radius: 15px;
+  width: fit-content;
+  padding: 25px;
+  height: fit-content;
 }
 
 .form input {
-  width: 30%;
   text-align: center;
-  margin: 10px;
+  margin: 5px;
 }
 
 .danger {
   color: red;
+  margin: 3px;
   font-size: 12.5px;
 }
 
 .succes {
   color: green;
+  margin: 3px;
   font-size: 12.5px;
 }
