feat modal & styles

--- a/client/src/component/cardFavorite/cardFavorite.module.css
+++ b/client/src/component/cardFavorite/cardFavorite.module.css
@@ -52,3 +52,33 @@
   color: rgb(58, 53, 53);
   cursor: pointer;
 }
+
+.containerButtonsModal {
+  margin-top: 1rem;
+  display: flex;
+  gap: 10px;
+}
+
+.h1Modal {
+  color: #0071e2;
+}
+
+.accept {
+  border-radius: 15px;
+  border: none;
+  padding: 0.4rem;
+}
+
+.accept:hover {
+  cursor: pointer;
+}
+
+.cancel {
+  border-radius: 15px;
+  border: none;
+  padding: 0.4rem;
+}
+
+.cancel:hover {
+  cursor: pointer;
+}
