--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 button:hover {
@@ -34,6 +34,7 @@ button:hover {
   border-radius: 15px;
   opacity: 0.4;
   background-color: rgba(255, 255, 255, 0.27);
+  border: 2px solid black;
 }
 
 .containerImagesActive:hover {
