--- a/client/src/component/favorites/favorites.module.css
+++ b/client/src/component/favorites/favorites.module.css
@@ -7,8 +7,6 @@
 .containerList {
   background-color: rgb(67, 62, 67);
   width: 25%;
-  position: sticky;
-  top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,19 +15,23 @@
 }
 
 .error {
-  position: absolute;
   color: white;
 }
 
 .contarinerCard {
   background-color: #212121;
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 10px;
-  width: 75%;
   justify-content: center;
+  min-height: 100vh;
+  width: 75%;
   padding: 10px;
+}
+
+.prueba {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-height: fit-content;
+  gap: 10px;
 }
 
 .item {
@@ -65,6 +67,7 @@
   color: black;
   font-weight: 501;
   padding: 5px;
+  font-size: 1rem;
 }
 
 .removeFavs:hover {
@@ -102,21 +105,29 @@
 }
 
 .accept {
-  border-radius: 15px;
+  border-radius: 10px;
   border: none;
   padding: 0.4rem;
+  font-size: 1rem;
+  background-color: #0071e2;
 }
 
 .accept:hover {
+  background-color: black;
+  color: white;
   cursor: pointer;
 }
 
 .cancel {
-  border-radius: 15px;
+  border-radius: 10px;
   border: none;
   padding: 0.4rem;
+  font-size: 1rem;
+  background-color: #0071e2;
 }
 
 .cancel:hover {
+  background-color: black;
+  color: white;
   cursor: pointer;
 }
